= Code =
* Added additional PHPDoc style documentation
* Added `DMM WP Title` - utilizes the `wp_title` filter to add text to the default title output
* Added `DMM Use Posted` function for posts without titles
* Added minimal doc-block to each file as relevant
* Added 'desk-mess-mirrored' loop template
* Added 'dmm-navigation' and implemented in 404, index, archive, and author template files
* Changed `my_theme_data` to `active_theme_data` to be more descriptive in `BNS Theme Version`
* Implemented 'desk-mess-mirrored' loop in 404, archive, author, index (home, front-page), page, single templates
* Re-defined each widget area separately to allow for descriptions to show end-user more details about each area
* Removed 'Home" link code from `dmm_list_pages`
* Removed unused images (from IE6 support)
* Replaced TEMPLATEPATH constant with `get_template_directory_uri`
* Updated documentation to clarify `BNS Dynamic Copyright` parameters
= CSS =
* Changed bottom of post to have smaller separating margin and added a bottom border to better delineate posts
* Removed the right and bottom borders from the gallery images; and added additional elements to handle galleries up to 10 columns wide
* Removed (using comments) `background property` from `code` element
* Removed margins from a blockquote if it is within another blockquote

/**
 * Internet Browsers Reviewed
 * ==========================
 *
 * Apple Safari v5.1.1 (Mac)
 * Apple Safari v5.1.1 (PC)
 * Firefox v8.0 (Mac)
 * Firefox v8.0 (PC)
 * Google Chrome v15.0
 * Internet Explorer v9.0
 * Opera v11.52
 */

/** ------------------------------------------------------------------------- */
----

== Version 1.9.1 ==
* added CSS optimizations
* added PHPDoc style documentation
* combined added comment classes `user-ID` and `microid` creation into one function `Add Comment Classes` in 'comments.php'
* corrected comment reply style
* drop direct support for Internet Explorer 6 or order