@@ -2,7 +2,7 @@
 Theme Name: Desk Mess Mirrored
 Theme URI: http://buynowshop.com/themes/desk-mess-mirrored/
 Description: Marble desktop covered with a mix of old and new items, such as some vintage papers, a stainless steel pen, and, a hot cup of coffee! <em>Now with drop-down menu support!</em> <strong>Please read the included changelog.txt and readme.txt files for details of the latest changes and important notices.</strong> The child theme Multi is available for download at http://buynowshop.com/themes/desk-mess-mirrored/
-Version: 2.0 (NOT PUBLISHED)
+Version: 2.0
 Author: Edward Caissie
 Author URI: http://edwardcaissie.com/
 WordPress Version Required: 3.0
